hphp/test/slow/hhbbc/magic_call_005.php.expectf
a

Fatal error: Call to protected Asd::heh() from invalid context in %s/slow/hhbbc/magic_call_005.php on line 18
